--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "atom-muse",
+  "name": "language-muse",
   "version": "0.1.0",
   "description": "Syntax highlighting and snippets for Muse markup",
   "keywords": [
